--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
 
 <h1>Welcome</h1>
-<a href= "http://a0115795.github.io/therps-adventure/">Click on me! Try out the game.</a>
+<a href= "http://a0115795.github.io/therps-adventure/">Click on me! Try out the game.</a> <br/>
 <a href= "http://https://github.com/a0115795/therps-adventure"> Click here! The will lead you to the directory with my write up.</a>
 
 </body>
