--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 <body>
 
 <h1>Welcome</h1>
-<p></p><a href= "http://a0115795.github.io/therps-adventure/">Click on me! Try out the game.</a></p>
-<p></p><a href= "http://github.com/a0115795/therps-adventure"> Click here! The will lead you to the directory with my write up.</a></p>
+<p><a href= "http://a0115795.github.io/therps-adventure/">Click on me! Try out the game.</a></p>
+<p><a href= "http://github.com/a0115795/therps-adventure"> Click here! The will lead you to the directory with my write up.</a></p>
 
 </body>
 
