--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <h1>Welcome</h1>
 <p><a href= "http://a0115795.github.io/therps-adventure/">Click on me! Try out the game.</a></p>
-<p><a href= "http://github.com/a0115795/therps-adventure">Click here! This link will lead you to the directory with my write up.</a></p>
+<p><a href= "http://github.com/a0115795/therps-adventure">Click here! This link will lead you to the directory with my write up. Please download the directory as a zip and access the write up from there,</a></p>
 
 </body>
 
